--- a/index.html
+++ b/index.html
@@ -3,13 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pacman</title>
+<style>
+    body{
+        margin: 10px;
+        padding: 10px;
+    }
+    div{
+        padding: 10px;
+        font-size: 30px;
+    }
+</style>
+
 </head>
 <body>
+    <div class="score">
+        
+    </div>
     <canvas>
 
     </canvas>
-    <script src='script.js'>
+    <script src="script.js">
 
     </script>
     
